update example and fix bug
