# docs/swagger.json
@@ -191,7 +191,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/selftype.Deagnosis"
+                                "$ref": "#/definitions/selftype.DeagnosisDate"
                             }
                         }
                     },
@@ -203,7 +203,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/selftype.Procedure"
+                                "$ref": "#/definitions/selftype.ProcedureDate"
                             }
                         }
                     }
@@ -273,10 +273,29 @@
             "type": "object",
             "properties": {
                 "deagnosisCode": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "J0190"
                 },
                 "duringTime": {
-                    "type": "string"
+                    "type": "integer",
+                    "example": 28
+                }
+            }
+        },
+        "selftype.DeagnosisDate": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string",
+                    "example": "20200505"
+                },
+                "deagnosisCode": {
+                    "type": "string",
+                    "example": "J0190"
+                },
+                "duringTime": {
+                    "type": "integer",
+                    "example": 28
                 }
             }
         },
@@ -290,7 +309,8 @@
                     }
                 },
                 "eventName": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "marathon"
                 },
                 "procedure": {
                     "type": "array",
@@ -304,7 +324,8 @@
             "type": "object",
             "properties": {
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "marathon"
                 }
             }
         },
@@ -339,10 +360,29 @@
             "type": "object",
             "properties": {
                 "duringTime": {
-                    "type": "string"
+                    "type": "integer",
+                    "example": 28
                 },
                 "procedureCode": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "3950"
+                }
+            }
+        },
+        "selftype.ProcedureDate": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string",
+                    "example": "20200505"
+                },
+                "duringTime": {
+                    "type": "integer",
+                    "example": 28
+                },
+                "procedureCode": {
+                    "type": "string",
+                    "example": "3950"
                 }
             }
         },
@@ -350,22 +390,27 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "J0390"
                 },
                 "commitment": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "0x1af2e641e834f6c503e0e6b9b593323342e7d45ad0aa299bc934110a4e13ae2f33c3a0fc695f397d51e8b4699b4d9f9397b3bc3e20fa42cb1a540ff8f19dc118"
                 },
                 "lowerbound": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 20200503
                 },
                 "prove": {
                     "type": "string"
                 },
                 "type": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Deagnosis"
                 },
                 "upperbound": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 20200531
                 }
             }
         },
